# website-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
files/: App.tsx  index.html
