[project]
name = "webserver-mcp"
version = "0.1.0"
description = "MCP server to read/write/search files served by a simple webserver"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "starlette",
    "uvicorn",
]

[project.scripts]
webserver-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
